--- a/lectures/tdist/main.Rnw
+++ b/lectures/tdist/main.Rnw
@@ -146,7 +146,7 @@ library(dplyr)
 
 \begin{frame}
   \frametitle{$t$, CI example}
-  We are $95$\% confident the poulation average mercury content of muscles in Taiji area dolphins is between $3.29$ and $5.51 \mu g/g$.
+  We are $95$\% confident the population average mercury content of muscles in Taiji area dolphins is between $3.29$ and $5.51 \mu g/g$.
 \end{frame}
 
 \subsection{Hypothesis Test}
